# fusion2urdf

./: .gitignore  README.md  pyproject.toml
addin/URDF_Exporter_Plus/: URDF_Exporter_Plus.manifest  URDF_Exporter_Plus.py
addin/URDF_Exporter_Plus/fusion2urdf/: cli.py  math3d.py  mesh_inertia.py  model.py  ros2_package.py  urdf_writer.py  usd_export.py
addin/URDF_Exporter_Plus/fusion_helpers/: extractor.py  stl_export.py
docs/: app.html  index.html  viewer.html
docs/demo/: robot.json  twodof.urdf
docs/demo/meshes/: base_link.stl  link1.stl  link2.stl
docs/pkg/fusion2urdf/: __init__.py  cli.py  mjcf_writer.py  model.py
scripts/: sync_addin.sh
src/fusion2urdf/: cli.py  intermediate.py  math3d.py  usd_export.py
tests/: conftest.py  test_mesh_inertia.py  test_mjcf_writer.py  test_model.py  test_pipeline.py  test_simready.py  test_urdf_writer.py
